@@ -1303,6 +1303,10 @@ class ETreeTestCaseBase(unittest.TestCase):
         self.assertEquals('<c><d></d></c>',
                           canonicalize(tostring(c)))
 
+    def test_tostring_none(self):
+        tostring = self.etree.tostring
+        self.assertRaises(AssertionError, self.etree.tostring, None)
+        
     def test_tostring_element_tail(self):
         tostring = self.etree.tostring
         Element = self.etree.Element
